--- a/css/_content.scss
+++ b/css/_content.scss
@@ -156,6 +156,13 @@
   }
 }
 
+@media only screen and (min-width: $bp-large) {
+  #main {
+    margin-bottom: 575px;
+    box-shadow: 0px 3px 6px rgba(0,0,0,0.16), 0px 3px 6px rgba(0,0,0,0.23);
+  }
+}
+
 
 @keyframes titlebarAnimation {
   0% {
