added entries for CV-Pics to /fair and /news

--- a/css/all.scss
+++ b/css/all.scss
@@ -65,6 +65,7 @@ $sidenav-main: #818181;
 
 
 $sidenav-boxshadow: -3px 0px 6px rgba(0,0,0,0.16), -3px 0px 6px rgba(0,0,0,0.23), 3px 0px 6px rgba(0,0,0,0.16), 3px 0px 6px rgba(0,0,0,0.23);
+$button-boxshadow: 0px 1px 3px rgba(0,0,0,0.16), 0px 1px 3px rgba(0,0,0,0.23);
 
 
 
