--- a/css/_fair.scss
+++ b/css/_fair.scss
@@ -146,6 +146,39 @@
   }
 
 
+  .programme_button_div {
+
+    a {
+      text-decoration: none;
+      :hover {
+        text-decoration: none;
+      }
+    }
+
+      text-align: center;
+
+      span {
+        border-radius: 10px;
+        padding: 5px;
+        background-color: $ct-blue;
+        color: $text-white;
+        text-decoration: none;
+        font-weight: bold;
+        box-shadow: $button-boxshadow;
+        border: 2px solid $ct-blue;
+        transition: linear 0.2s;
+      }
+
+      :hover {
+        span {
+          text-decoration: none;
+          background-color: $bg-gray;
+          color: $ct-blue;
+        }
+      }
+
+  }
+
 
 
   // .image-container {
