--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -18,3 +18,10 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'montserrat-bold';
+	src: url('#{$awss3}/fonts/Montserrat/Montserrat-SemiBold.ttf');
+	font-weight: normal;
+	font-style: normal;
+}
