--- a/css/all.scss
+++ b/css/all.scss
@@ -81,3 +81,4 @@ $button-boxshadow: 0px 1px 3px rgba(0,0,0,0.16), 0px 1px 3px rgba(0,0,0,0.23);
 @import "aboutus";
 @import "companies";
 @import "archive";
+@import "registration";
