--- a/css/_registration.scss
+++ b/css/_registration.scss
@@ -1,68 +1,5 @@
 .registration{
-    $primary-color: #007bff;
-    $secondary-color: #0056b3;
-    $border-color: #ccc;
-    $text-color: #333;
-    $label-margin-bottom: 10px;
-    $input-padding: 15px;
-    $input-font-size: 16px;
-    $submit-btn-padding: 10px 20px;
-    $submit-btn-font-size: 18px;
-    $border-radius: 4px;
-    $form-group-margin-bottom: 20px;
-
-    // Mixin for input styles
-    @mixin input-style {
-    display: block;
-    width: 100%;
-    padding: $input-padding;
-    font-size: $input-font-size;
-    color: $text-color;
-    border: 1px solid $border-color;
-    border-radius: $border-radius;
-    box-sizing: border-box; // Ensure padding does not affect overall width
-    }
-
-    // Basic form styling
-    .form-container {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-
-    .form-group {
-    margin-bottom: $form-group-margin-bottom;
-    
-    label {
-        display: block;
-        margin-bottom: $label-margin-bottom;
-        color: $text-color;
-    }
-    
-    input[type="text"],
-    input[type="email"],
-    textarea {
-        @include input-style;
-    }
-    
-    textarea {
-        resize: vertical;
-    }
-    }
-
-    input[type="submit"] {
-    background-color: $primary-color;
-    color: #fff;
-    padding: $submit-btn-padding;
-    font-size: $submit-btn-font-size;
-    border: none;
-    border-radius: $border-radius;
-    cursor: pointer;
-    
-    &:hover {
-        background-color: $secondary-color;
-    }
+    .formSection label {
+        margin-right: 20px;
     }
 }
